<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	   	<TextView android:text="@string/hostname" 
	   		android:layout_width="85dip"
	   		android:layout_height="wrap_content"/>
	
	   	<EditText android:id="@+id/hostname"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"/>
   	</LinearLayout>
   	
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	   	<TextView android:text="@string/mac" 
	   		android:layout_width="85dip"
	   		android:layout_height="wrap_content"/>
	
	   	<EditText android:id="@+id/mac"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"/>
   	</LinearLayout>
    
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	   	<TextView android:text="@string/ip" 
	   		android:layout_width="85dip"
	   		android:layout_height="wrap_content"/>
	
	   	<EditText android:id="@+id/ip"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"/>
   	</LinearLayout>
   	
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	   	<TextView android:text="@string/port" 
	   		android:layout_width="85dip"
	   		android:layout_height="wrap_content"/>
	
	   	<EditText android:id="@+id/port"
	   		android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"/>
   	</LinearLayout>
    
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="right">
		<Button android:id="@+id/confirm" 
			android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	
		<Button android:id="@+id/cancel" 
			android:text="@string/cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>